; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/aim/extr_mmu_oea64.c_moea64_quick_remove_page.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/aim/extr_mmu_oea64.c_moea64_quick_remove_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@hw_direct_map = common dso_local global i64 0, align 8
@aim = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@MA_OWNED = common dso_local global i32 0, align 4
@qmap_addr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"moea64_quick_remove_page: invalid address\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @moea64_quick_remove_page(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* @hw_direct_map, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %23

8:                                                ; preds = %2
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aim, i32 0, i32 0), align 4
  %10 = call i32 @PCPU_PTR(i32 %9)
  %11 = load i32, i32* @MA_OWNED, align 4
  %12 = call i32 @mtx_assert(i32 %10, i32 %11)
  %13 = load i32, i32* @qmap_addr, align 4
  %14 = call i64 @PCPU_GET(i32 %13)
  %15 = load i64, i64* %4, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @KASSERT(i32 %17, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aim, i32 0, i32 0), align 4
  %20 = call i32 @PCPU_PTR(i32 %19)
  %21 = call i32 @mtx_unlock(i32 %20)
  %22 = call i32 (...) @sched_unpin()
  br label %23

23:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @mtx_assert(i32, i32) #1

declare dso_local i32 @PCPU_PTR(i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i64 @PCPU_GET(i32) #1

declare dso_local i32 @mtx_unlock(i32) #1

declare dso_local i32 @sched_unpin(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
